Refactor all the CSS
This was horrible and I hope I never have to do this shit again

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,17 +8,20 @@
         {{ partial "header.html" . }}
    
         <main>
-            {{ if .Params.toc }}
-            <div class="toc-container">
-                {{ partial "toc.html" . }}
-
-            </div>
-            {{ end }}
         
-            <div class="container" id="content">
+            {{ if .Params.date }}
+            <article
+            {{ else }}
+            <div
+            {{ end }}
+                class="container" id="content">
                 {{ block "main" . }}
                 {{ end }}
-            </div> 
+            {{ if .Params.date }}
+            </article>
+            {{ else }}
+            </div>
+            {{ end }}
         </main>
         
         {{ partial "footer.html" . }}
