--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
-<footer>
+<footer class="dark-background">
 
-    <div class="container flex-horizontal">
+    <div class="container flex-horizontal flex-3-cols">
         <div class="flex-item">
             <p><b>Social</b></p>
             <ul class="list-blank">
