--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
-<header>
+<header class="dark-background">
     <nav>
         <div class="container flex-horizontal">
             <h1 class="logo flex-grow"><a href="/">Olivia</a></h1>
-            <div id="sidenav" class="sidenav flex-vertical">
+            <div id="sidenav" class="sidenav flex-vertical dark-background">
                 <div class="sidenav-scroll">
                     <a href="javascript:void(0)" class="close" onclick="closeSidenav()">&times;</a>
                     {{ partial "nav.html" . }}
