--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,4 +1,4 @@
-<div class="toc">
+<div id="toc" class="container">
     <h2>Table of contents</h2>
     {{ if (in .Page.TableOfContents "<ul>") }}
             
