--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,9 @@
 {{ define "main" }}
+    {{ if .Params.showtitle }}
+        <h1>{{ .Title }}</h1>
+    {{ end }}
+    {{ if .Params.toc }}
+        {{ partial "toc.html" . }}
+    {{ end }}
     {{ .Content }}
 {{ end }}
