Silence long-standing isset warning, lower-case all tags

--- a/layouts/tags/tag_list.html
+++ b/layouts/tags/tag_list.html
@@ -11,11 +11,9 @@
     <div class="flex-horizontal">
         {{ range .Pages }}
         <div class="shade-box" style="min-width: 200px; flex: 0 1 200px;">
-            <p><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a> ({{ .Site.Taxonomies.tags.Count .Title }})</p>
+            <p><a href="{{ .Permalink }}">{{ .Title | markdownify | lower }}</a> ({{ .Site.Taxonomies.tags.Count .Title }})</p>
             {{ if .Params.description }}
                 <p>{{ .Params.description }}</p>
-            {{ else if isset .Site.Params.tags .Title }}
-                <p>{{ index .Site.Params.tags .Title | markdownify }}</p>
             {{ end }}
         </div>
         {{ end }}
