Move comment field to the top, replace navbar title
Should've done the latter ages ago

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="dark-background">
     <nav>
         <div class="container flex-horizontal">
-            <h1 class="logo flex-grow"><a href="/">Olivia</a></h1>
+            <h1 class="logo flex-grow"><a href="/">Olivia's blog</a></h1>
             <div id="sidenav" class="sidenav flex-vertical dark-background">
                 <div class="sidenav-scroll">
                     <a href="javascript:void(0)" class="close" onclick="closeSidenav()">&times;</a>
