Replace blog in navbar with "posts"

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <a href="/">Home</a>
-<a href="/posts/">Blog</a>
+<a href="/posts/">Posts</a>
 <a href="/tags.html">Tags</a>
 <a href="/til/">TIL</a>
 <a href="/contact.html">Contact me</a>
