--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,6 +13,8 @@
             <p><b>Useful links</b></p>
             <ul class="list-blank">
                 <li><a href="/posts/feed.xml">Blog RSS feed</a></li>
+                <li><a href="/til/feed.xml">Today I Learned RSS feed</a></li>
+                <li><a href="/feed.xml">All pages RSS feed</a></li>
             </ul>
         </div>
         <div class="flex-item">
