--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,6 +24,8 @@
 <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}" />
 
 <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/posts/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/til/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/feed.xml" | absURL }}" />
 
 <!-- OpenGraph ((( -->
 <meta property="og:title" content="{{ .Title }}" />
