--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,9 +23,9 @@
 {{ $style := $base | css.Sass | resources.Minify }}
 <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}" />
 
-<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/posts/feed.xml" | absURL }}" />
-<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/til/feed.xml" | absURL }}" />
-<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="Blog feed" href="{{ "/posts/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="TIL feed" href="{{ "/til/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="Blog + TIL feed" href="{{ "/feed.xml" | absURL }}" />
 
 <!-- OpenGraph ((( -->
 <meta property="og:title" content="{{ .Title }}" />
