--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,7 +25,7 @@
 
 <link rel="alternate" type="application/rss+xml" title="Blog feed" href="{{ "/posts/feed.xml" | absURL }}" />
 <link rel="alternate" type="application/rss+xml" title="TIL feed" href="{{ "/til/feed.xml" | absURL }}" />
-<link rel="alternate" type="application/rss+xml" title="Blog + TIL feed" href="{{ "/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="Combined blog + TIL feed" href="{{ "/feed.xml" | absURL }}" />
 
 <!-- OpenGraph ((( -->
 <meta property="og:title" content="{{ .Title }}" />
