--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,6 +39,30 @@
 {{ end }}
 <meta property="og:site_name" content="{{ .Site.Title }}" />
 <meta property="og:locale" content="{{ .Site.LanguageCode }}" />
+{{ if (and (or (eq .Section "til") (eq .Section "posts")) (.IsPage)) }}
+    <meta property="og:type" content="article" />
+    <meta property="article:author" content="{{ "/" | absURL }}" />
+
+    {{ $taxonomy := "tags" }}
+    {{ with (sort (.Param $taxonomy) ) }}
+        {{ range $index, $tag := . }}
+            <meta property="og:tag" content="{{ $tag }}" />
+        {{ end }}
+    {{ end }}
+{{ end }}
+
+{{ if isset .Params "ogprofile" }}
+    <!-- Required for og:author to function properly -->
+    {{ $fn := index (.Params.ogprofile) 0 }}
+    {{ $g := index (.Params.ogprofile) 2 }}
+    {{ $un := index (.Params.ogprofile) 3 }}
+
+    <meta property="profile:first_name" content="{{ $fn }}" />
+    <meta property="profile:gender" content="{{ $g }}" />
+    <meta property="profile:username" content="{{ $un }}" />
+
+{{ end }}
+
 <!-- ))) -->
 <!--
 vim:fmr=(((,)))
