Missed the article prefix

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
-    <head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#">
+    <head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile# article: http://ogp.me/ns/article#">
         {{ partial "head.html" . }}
     </head>
 
