Add codeberg to the list

--- a/layouts/partials/socialmedia.html
+++ b/layouts/partials/socialmedia.html
@@ -5,4 +5,5 @@
     <li class="target-highlight" id="somediscordusr"><b>Discord</b>: @{{.Site.Params.discord_user}}</b>
     <!--<li><b>Twitch: </b><a href="https://twitch.tv/oliviawolfie">@OliviaWolfie</a></li>-->
     <li class="target-highlight" id="somegithub"><b>GitHub: </b><a href="https://github.com/LunarWatcher">LunarWatcher</a></li>
+    <li class="target-highlight" id="somecodeberg"><b>Codeberg: </b><a href="https://codeberg.org/{{ .Site.Params.codeberg }}">{{.Site.params.codeberg}}</a></li>
 </ul>
