*Actually* fix email

--- a/layouts/partials/socialmedia.html
+++ b/layouts/partials/socialmedia.html
@@ -1,7 +1,7 @@
 <ul>
     <li class="target-highlight" id="somediscord"><a href="https://discord.gg/{{ .Site.Params.discord }}">Discord server</a></li>
     <li class="target-highlight" id="somestack"><a href="https://stackoverflow.com/users/6296561">Stack Overflow</a></li>
-    <li class="target-highlight" id="email"><a href="mailto:zoe.i2k1@gmail.com">Email</a> (<a href="https://github.com/LunarWatcher.gpg">GPG key</a>)</li>
+    <li class="target-highlight" id="email"><a href="mailto:{{ .Site.Params.author.email }}">Email</a></li>
     <li class="target-highlight" id="somediscordusr"><b>Discord</b>: @{{.Site.Params.discord_user}}</b>
     <!--<li><b>Twitch: </b><a href="https://twitch.tv/oliviawolfie">@OliviaWolfie</a></li>-->
     <li class="target-highlight" id="somegithub"><b>GitHub: </b><a href="https://github.com/LunarWatcher">LunarWatcher</a></li>
