one day, I'll be able to write an about me

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,7 @@
             <ul class="list-blank">
                 <li><a href="//discord.gg/{{.Site.Params.discord}}">Discord server</a></li>
                 <li><a href="//github.com/LunarWatcher">GitHub</a></li>
+                <li><a href="//codeberg.org/LunarWatcher">Codeberg</a></li>
                 <li><a href="/contact.html">Other contact methods</a></li>
             </ul>
         </div>
@@ -32,7 +33,7 @@
             <p>Powered by <a href="https://gohugo.io/">Hugo</a>
                 <!-- Don't click the button. -->
                 (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
-            <p>&copy; Olivia, 2019-2024</p>
+            <p>&copy; Olivia, 2019-2025</p>
         </div>
     </div>
 </div>
