--- a/layouts/partials/socialmedia.html
+++ b/layouts/partials/socialmedia.html
@@ -2,7 +2,8 @@
     <li class="target-highlight" id="somediscord"><a href="https://discord.gg/{{ .Site.Params.discord }}">Discord server</a></li>
     <li class="target-highlight" id="email"><a href="mailto:{{ .Site.Params.author.email }}">Email</a></li>
     <li class="target-highlight" id="somediscordusr"><b>Discord</b>: @{{.Site.Params.discord_user}}</b>
-    <!--<li><b>Twitch: </b><a href="https://twitch.tv/oliviawolfie">@OliviaWolfie</a></li>-->
+    <li class="target-highlight" id="somecodidact"><a href="https://software.codidact.com/users/63480">Codidact</a></li>
     <li class="target-highlight" id="somegithub"><b>GitHub: </b><a href="https://github.com/LunarWatcher">LunarWatcher</a></li>
     <li class="target-highlight" id="somecodeberg"><b>Codeberg: </b><a href="https://codeberg.org/{{ .Site.Params.codeberg }}">{{.Site.Params.codeberg}}</a></li>
 </ul>
+
