--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <a href="/">Home</a>
 <a href="/posts/">Posts</a>
-<a href="/tags.html">Tags</a>
+<a href="/tags/">Tags</a>
 <a href="/til/">TIL</a>
 <a href="/contact.html">Contact me</a>
 <a href="/pages.html">Pages</a>
